<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_name"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                tools:text="Sofa" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_desc"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/item_description"
                android:inputType="textMultiLine"
                android:lines="3"
                tools:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_amount"
                android:layout_height="wrap_content"
                android:hint="@string/amount"

                tools:text="5.00" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:id="@+id/fab_save"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:layout_margin="16dp"
        />
</FrameLayout>